fix content jumping when burgermenu is opened

--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,7 @@ html {
 body {
   background-color: v.$color-black-normal;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 // fonts
